[tool.poetry]
name = "dateparse"
version = "0.1.0"
description = "A pure Python library for parsing natural language time expressions, with minimal dependencies"
authors = ["keagud <keagud@protonmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

